--- a/Visibility-Visualization/pvcT-Visualization/views/resourcecentricviewops.jade
+++ b/Visibility-Visualization/pvcT-Visualization/views/resourcecentricviewops.jade
@@ -30,7 +30,7 @@ html
       //Huynh start
       var session_username = sessionStorage.getItem('ss_user_name');
       if(session_username === null){
-      window.location.replace("http://103.22.221.55:3006/login");
+      window.location.replace("http://210.125.84.69:3006/login");
       }
       //Huynh End
       //var boxes = JSON.parse(data);
@@ -40,24 +40,12 @@ html
       var instanceList    = !{instanceList};
       var serviceList     = !{serviceList};
       var ovsBridgeStatus = !{ovsBridgeStatus};
+      var DIR             = 'images/';
       var index=0, boxlevel=1, switchlevel=0, instancelevel=0, servicelevel=0;
-      var nodes             = null;
-      var edges             = null;
-      var network           = null;
-      var DIR               = 'images/';
-      var EDGE_LENGTH_MAIN  = 350;
-      var EDGE_LENGTH_SUB   = 150;
-      var BridgeLinkColor = 'GREEN';
-      var BridgeNodeColor = '#3399ff';
-      var LENGTH_SERVER     = 150,
-      LENGTH_SUB = 50,
-      WIDTH_SCALE = 2,
-      GREEN = 'green',
-      RED = '#C5000B',
-      ORANGE = 'orange',
-      //GRAY = '#666666',
-      GRAY = 'gray',
-      BLACK = '#2B1B17';
+      var nodes = null, edges = null, network = null;
+      var EDGE_LENGTH_MAIN  = 350, EDGE_LENGTH_SUB = 150;
+      var BridgeLinkColor = 'GREEN', BridgeNodeColor = '#3399ff';
+      var LENGTH_SERVER = 150, LENGTH_SUB = 50, WIDTH_SCALE = 2, GREEN = 'green', RED = '#C5000B', ORANGE = 'orange', GRAY = 'gray', BLACK = '#2B1B17';
       // Called when the Visualization API is loaded.
       function draw() {
       // Create a data table with nodes.
@@ -65,7 +53,7 @@ html
       // Create a data table with links.
       edges = [];
       //Add network Node
-      nodes.push({id: 1, label: '                                   TEIN Network                                   ', font: {size: 50, color: '#ffffff'},shape: 'box', color: BridgeNodeColor, level:0, fixed: false, physics:true});
+      nodes.push({id: 1, label: '                                   Network                                   ', font: {size: 50, color: '#ffffff'},shape: 'box', color: BridgeNodeColor, level:0, fixed: false, physics:true});
       //nodes.push({id: 1, image: DIR + 'tein.png', shape: 'image', level:0, fixed: true, physics:true});
       //nodes.push({id: 1001, x: x, y: y, label: 'Desktop', group: 'desktop', value: 4, fixed: false, physics:false});
       //edges.push({from: 1000, to: 1001, length: EDGE_LENGTH_MAIN, width: WIDTH_SCALE * 6, color: GREEN, label: '0.71 mbps'});
@@ -255,10 +243,10 @@ html
       if(nodes[i].id == nodeId){
       switch (nodes[i].level){
       case 1: //Box
-      window.parent.receiveValueBox(nodes[i]);
+      window.parent.receiveValueBoxflow(nodes[i]);
       break;
       case 2: // brcap
-      window.parent.receiveValueBrCap(nodes[i]);
+      window.parent.receiveValueBrCapflow(nodes[i]);
       break;
       case 3: // brdev
       break;
@@ -267,7 +255,7 @@ html
       case 5: // brint
       break;
       case 6: // vm
-      window.parent.receiveValueVM(nodes[i])
+      window.parent.receiveValueVMflow(nodes[i])
       break;
       case 7: // service
       break;
@@ -300,4 +288,3 @@ html
     p
     p
     #mynetwork(align='center')
-
