--- a/Visibility-Visualization/pvcT-Visualization/views/menu.jade
+++ b/Visibility-Visualization/pvcT-Visualization/views/menu.jade
@@ -193,14 +193,14 @@ html(lang='en')
               #panel-heading-id.panel-heading Resource-centric Topological View
               .panel-body
                 p
-                  iframe#topoIframe(src='http://210.125.84.69:3006/resourcecentricviewops', width='100%', height='60%')
+                  iframe#topoIframe(src='http://210.125.84.69:3006/resourcecentricviewops', width='1560', height='600')
         .row
           .col-lg-12
             .panel.panel-default
               .panel-heading Metrics Visualization Panel
               .panel-body
                 p
-                  iframe#grafanaIframe(src='', width='100%', height='50%')
+                  iframe#grafanaIframe(src='', width='1560', height='500')
     // jQuery
     script(src='../bower_components/jquery/dist/jquery.min.js')
     // Bootstrap Core JavaScript
