--- a/Visibility-Visualization/pvcT-Visualization/views/resourcecentricviewops.jade
+++ b/Visibility-Visualization/pvcT-Visualization/views/resourcecentricviewops.jade
@@ -243,7 +243,7 @@ html
       if(nodes[i].id == nodeId){
       switch (nodes[i].level){
       case 1: //Box
-      window.parent.receiveValueBoxflow(nodes[i]);
+      window.parent.receiveValueBox(nodes[i]);
       break;
       case 2: // brcap
       window.parent.receiveValueBrCapflow(nodes[i]);
